--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,15 @@
   display: flex;
   justify-content: center;
 }
+
+.MoviesList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.MoviesList-item {
+  width: calc(25% - 32px);
+  margin: 16px;
+}
