--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,14 @@
 .MoviesList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: 16px;
 }
 
 .MoviesList-item {
-  width: calc(25% - 32px);
-  margin: 16px;
+  width: calc(20% - 16px);
+  margin: 8px;
+}
+
+.content h2 {
+  font-size: 1em;
 }
